--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.5",
+    "expo-camera": "~14.1.1",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "^16.5.5",
+    "expo-media-library": "~15.9.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "^0.73.2",
     "react-native-axios": "^0.17.1",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1304.0",
+    "react-native-image-picker": "^7.1.1",
     "react-native-maps": "^1.11.3",
     "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^9.0.1",
     "styled-components": "^6.1.8",
-    "expo-camera": "~14.1.1",
-    "expo-media-library": "~15.9.1"
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
