--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^9.0.1",
     "styled-components": "^6.1.8",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-notifications": "~0.27.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
